--- a/index.html
+++ b/index.html
@@ -19,33 +19,27 @@
                     <a href="">Home</a>
                 </li>
                 <li class="menu-item">
-                    <a href="">Archive</a>
-                </li>
-                <li class="menu-item">
-                    <a href="">Shop</a>
+                    <a href="./pages/archive.html">Archive</a>
                 </li>
             </ul>
-            <a href="">
-                <img src="./resources/menu-logo.png" id="menu-logo">
+            <a href="" id="menu-logo">
+                <img src="./resources/menu-logo.png" id = "menu-logo">
             </a>
             <ul id="menu-right">
-                <li class="menu-item">
-                    <a href="">Events</a>
-                </li>
                 <li class="menu-item">
                     <a href="">About</a>
                 </li>
                 <li class="menu-item">
-                    <a href="">Contact</a>
+                    <a href="pages/contact.html">Contact</a>
                 </li>
             </ul>
         </header>
 
         <!-- Main -->
-        <main id="main-container" class="grid">
+        <main class="grid">
 
             <!-- Article -->
-            <div id="article-container">
+            <article id="main-container">
                 <h1>Primary Header</h1>
                 <div class="author">WRITTEN by PETAR PEYCHEV 2018 // 254 comments</div>
                 <img src="./resources/article-image.jpg" class="article-image">
@@ -92,7 +86,7 @@
                     ea eveniet officiis quibusdam minima doloremque placeat quidem eius molestiae facere tenetur voluptates
                     exercitationem aspernatur cupiditate excepturi! Animi quisquam asperiores dolore porro molestias maxime,
                     numquam dolorum?</p>
-            </div>
+            </article>
 
             <!-- Widget Sidebar -->
             <div id="widget-container">
