added about page and fixed HTML5 semantic tags

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="site-container">
 
-        <!-- Header -->
-        <header id="header-container" class="grid">
+        <!-- Navbar -->
+        <nav id="nav-container" class="grid">
             <ul id="menu-left">
                 <li class="menu-item">
                     <a href="">Home</a>
@@ -23,17 +23,17 @@
                 </li>
             </ul>
             <a href="" id="menu-logo">
-                <img src="./resources/menu-logo.png" id = "menu-logo">
+                <img src="./resources/menu-logo.png" alt="menu logo">
             </a>
             <ul id="menu-right">
                 <li class="menu-item">
-                    <a href="">About</a>
+                    <a href="pages/about.html">About</a>
                 </li>
                 <li class="menu-item">
                     <a href="pages/contact.html">Contact</a>
                 </li>
             </ul>
-        </header>
+        </nav>
 
         <!-- Main -->
         <main class="grid">
@@ -42,7 +42,7 @@
             <article id="main-container">
                 <h1>Primary Header</h1>
                 <div class="author">WRITTEN by PETAR PEYCHEV 2018 // 254 comments</div>
-                <img src="./resources/article-image.jpg" class="article-image">
+                <img src="./resources/article-image.jpg" class="article-image" alt="article image">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam perspiciatis quae, excepturi, minima, hic
                     nihil dolore officia animi officiis perferendis reprehenderit aperiam molestiae quas sit consequatur
                     labore. Doloremque eum consequatur neque blanditiis odio assumenda corporis adipisci iure. Doloribus,
@@ -89,13 +89,13 @@
             </article>
 
             <!-- Widget Sidebar -->
-            <div id="widget-container">
+            <aside id="widget-container">
                 <div class="widget">
                     <div class="widget-header">
                         Buy My Book
                     </div>
                     <a href="">
-                        <img src="./resources/book-img.jpg" id="book-img">
+                        <img src="./resources/book-img.jpg" id="book-img" alt="book">
                     </a>
                 </div>
                 <div class="widget">
@@ -139,7 +139,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </aside>
         </main>
 
         <!-- Footer -->
