--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
                     <a href="../index.html">Home</a>
                 </li>
                 <li class="menu-item">
-                    <a href="">Archive</a>
+                    <a href="./archive.html">Archive</a>
                 </li>
             </ul>
             <a href="../index.html" id="menu-logo">
@@ -27,7 +27,7 @@
             </a>
             <ul id="menu-right">
                 <li class="menu-item">
-                    <a href="./about.html">About</a>
+                    <a href="">About</a>
                 </li>
                 <li class="menu-item">
                     <a href="./contact.html">Contact</a>
@@ -38,35 +38,27 @@
         <!-- Main -->
         <main class="grid">
 
-            <!-- Article Summaries -->
+            <!-- About -->
             <div id="main-container">
-              <div class="summary">
-                <a href="../index.html"><h1>Primary Header</h1></a>
-                <div class="author">WRITTEN by PETAR PEYCHEV 2018 // 254 comments</div>
-                <img src="../resources/article-image.jpg" class="article-image" alt="first article image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam perspiciatis quae, excepturi, minima, hic
-                    nihil dolore officia animi officiis perferendis reprehenderit aperiam molestiae quas sit consequatur
-                    labore. Doloremque eum consequatur neque blanditiis odio assumenda corporis adipisci iure. Doloribus,
-                    incidunt perspiciatis.</p>
-              </div>
-              <div class="summary">
-                <a href="../index.html"><h1>Older Article Header</h1></a>
-                <div class="author">WRITTEN by PETAR PEYCHEV 2017 // 186 comments</div>
-                <img src="../resources/article-image2.jpg" class="article-image" alt="second article image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam perspiciatis quae, excepturi, minima, hic
-                    nihil dolore officia animi officiis perferendis reprehenderit aperiam molestiae quas sit consequatur
-                    labore. Doloremque eum consequatur neque blanditiis odio assumenda corporis adipisci iure. Doloribus,
-                    incidunt perspiciatis.</p>
-              </div>
-              <div class="summary">
-                <a href="../index.html"><h1>Oldest Article Header</h1></a>
-                <div class="author">WRITTEN by PETAR PEYCHEV 2016 // 124 comments</div>
-                <img src="../resources/article-image3.jpg" class="article-image" alt="third article image">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam perspiciatis quae, excepturi, minima, hic
-                    nihil dolore officia animi officiis perferendis reprehenderit aperiam molestiae quas sit consequatur
-                    labore. Doloremque eum consequatur neque blanditiis odio assumenda corporis adipisci iure. Doloribus,
-                    incidunt perspiciatis.</p>
-              </div>
+                <h1>About Me</h1>
+                <img src="../resources/portrait.jpg" class="article-image" id="portrait" alt="portrait photo">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                  reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                  pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <h2>Why is there no CPD proof here?</h2>
+                  <p>Because I am getting a CPD grade through Acceler8, for which i
+                  don't need to present any proof.</p>
             </div>
 
             <!-- Widget Sidebar -->
