--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,8 +13,8 @@
 <body>
     <div class="site-container">
 
-        <!-- Header -->
-        <header id="header-container" class="grid">
+        <!-- Navbar -->
+        <nav id="nav-container" class="grid">
             <ul id="menu-left">
                 <li class="menu-item">
                     <a href="../index.html">Home</a>
@@ -24,27 +24,27 @@
                 </li>
             </ul>
             <a href="../index.html" id="menu-logo">
-                <img src="../resources/menu-logo.png" id = "menu-logo">
+                <img src="../resources/menu-logo.png" alt="menu logo">
             </a>
             <ul id="menu-right">
                 <li class="menu-item">
-                    <a href="">About</a>
+                    <a href="./about.html">About</a>
                 </li>
                 <li class="menu-item">
                     <a href="">Contact</a>
                 </li>
             </ul>
-        </header>
+        </nav>
 
         <!-- Main -->
         <main class="grid">
 
-            <!-- Article -->
+            <!-- Contact Form -->
             <div id="main-container">
               <div class="container">
-                <form id="contact" action="" method="post">
+                <form id="contact" method="post">
                   <h2>Contact Me</h2>
-                  <img src="../resources/typewriter.jpg">
+                  <img src="../resources/typewriter.jpg" alt="typewriter">
                   <fieldset>
                     <input placeholder="Name" type="text" tabindex="1" required autofocus>
                     <input placeholder="Email Address" type="email" tabindex="2" required>
@@ -57,13 +57,13 @@
             </div>
 
             <!-- Widget Sidebar -->
-            <div id="widget-container">
+            <aside id="widget-container">
                 <div class="widget">
                     <div class="widget-header">
                         Buy My Book
                     </div>
                     <a href="">
-                        <img src="../resources/book-img.jpg" id="book-img">
+                        <img src="../resources/book-img.jpg" id="book-img" alt="book">
                     </a>
                 </div>
                 <div class="widget">
@@ -91,23 +91,23 @@
                     </div>
                     <ul class="link-list">
                         <li>
-                            <a href="">Fuzzy Logic</a>
+                            <a href="../index.html">Fuzzy Logic</a>
                         </li>
                         <li>
-                            <a href="">New Media Revolution</a>
+                            <a href="../index.html">New Media Revolution</a>
                         </li>
                         <li>
-                            <a href="">Ten Rules for a Fulfilling Life</a>
+                            <a href="../index.html">Ten Rules for a Fulfilling Life</a>
                         </li>
                         <li>
-                            <a href="">Fighting the Monkey Brain</a>
+                            <a href="../index.html">Fighting the Monkey Brain</a>
                         </li>
                         <li>
-                            <a href="">Nanoplague!</a>
+                            <a href="../index.html">Nanoplague!</a>
                         </li>
                     </ul>
                 </div>
-            </div>
+            </aside>
         </main>
 
         <!-- Footer -->
