added section tags instead of divs

--- a/pages/about.html
+++ b/pages/about.html
@@ -39,7 +39,7 @@
         <main class="grid">
 
             <!-- About -->
-            <div id="main-container">
+            <section id="main-container">
                 <h1>About Me</h1>
                 <img src="../resources/portrait.jpg" class="article-image" id="portrait" alt="portrait photo">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -59,7 +59,7 @@
                   <h2>Why is there no CPD proof here?</h2>
                   <p>Because I am getting a CPD grade through Acceler8, for which i
                   don't need to present any proof.</p>
-            </div>
+            </section>
 
             <!-- Widget Sidebar -->
             <aside id="widget-container">
