--- a/pages/archive.html
+++ b/pages/archive.html
@@ -40,7 +40,7 @@
 
             <!-- Article Summaries -->
             <div id="main-container">
-              <div class="summary">
+              <section class="summary">
                 <a href="../index.html"><h1>Primary Header</h1></a>
                 <div class="author">WRITTEN by PETAR PEYCHEV 2018 // 254 comments</div>
                 <img src="../resources/article-image.jpg" class="article-image" alt="first article image">
@@ -48,8 +48,8 @@
                     nihil dolore officia animi officiis perferendis reprehenderit aperiam molestiae quas sit consequatur
                     labore. Doloremque eum consequatur neque blanditiis odio assumenda corporis adipisci iure. Doloribus,
                     incidunt perspiciatis.</p>
-              </div>
-              <div class="summary">
+              </section>
+              <section class="summary">
                 <a href="../index.html"><h1>Older Article Header</h1></a>
                 <div class="author">WRITTEN by PETAR PEYCHEV 2017 // 186 comments</div>
                 <img src="../resources/article-image2.jpg" class="article-image" alt="second article image">
@@ -57,8 +57,8 @@
                     nihil dolore officia animi officiis perferendis reprehenderit aperiam molestiae quas sit consequatur
                     labore. Doloremque eum consequatur neque blanditiis odio assumenda corporis adipisci iure. Doloribus,
                     incidunt perspiciatis.</p>
-              </div>
-              <div class="summary">
+              </section>
+              <section class="summary">
                 <a href="../index.html"><h1>Oldest Article Header</h1></a>
                 <div class="author">WRITTEN by PETAR PEYCHEV 2016 // 124 comments</div>
                 <img src="../resources/article-image3.jpg" class="article-image" alt="third article image">
@@ -66,7 +66,7 @@
                     nihil dolore officia animi officiis perferendis reprehenderit aperiam molestiae quas sit consequatur
                     labore. Doloremque eum consequatur neque blanditiis odio assumenda corporis adipisci iure. Doloribus,
                     incidunt perspiciatis.</p>
-              </div>
+              </section>
             </div>
 
             <!-- Widget Sidebar -->
