--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,7 +40,7 @@
         <main class="grid">
 
             <!-- Contact Form -->
-            <div id="main-container">
+            <section id="main-container">
               <div class="container">
                 <form id="contact" method="post">
                   <h2>Contact Me</h2>
@@ -54,7 +54,7 @@
                   </fieldset>
                 </form>
               </div>
-            </div>
+            </section>
 
             <!-- Widget Sidebar -->
             <aside id="widget-container">
