--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/contact.css">
+    <link rel="shortcut icon" type="image/png" href="../resources/favicon.png"/>
     <title>Petar Peychev - ideas, stories, thoughts</title>
 </head>
 
